<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home"
    android:background="#E9E3D5"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="#190019"
        android:layout_marginTop="50dp"

        />
    <ImageView

        android:id="@+id/ivIconCap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/graduation_cap_solid"
        android:contentDescription="@string/ic_cap"
        android:layout_marginTop="50dp"

        />
    <TextView
        android:id="@+id/tvTotalQues"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_questions"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_marginTop="25dp"
        android:layout_marginStart="30dp"
        android:layout_gravity="start"
        android:textColor="#190019"

        />
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="@integer/material_motion_duration_long_1"
        >
        <TextView
            android:id="@+id/tvQuestion"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/question"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:textColor="#190019"

            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAnsa"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:text="@string/ans_a"
            android:layout_below="@id/tvQuestion"
            android:layout_marginTop="20dp"
            android:background="#9E017180"
            android:layout_margin="2dp"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAnsb"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_below="@id/btnAnsa"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"


            android:layout_marginEnd="2dp"
            android:layout_marginBottom="2dp"
            android:background="#9E017180"
            android:text="@string/ans_b" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAnsc"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:text="@string/ans_c"
            android:layout_below="@id/btnAnsb"
            android:background="#9E017180"
            android:layout_margin="2dp"

            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAnsd"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:text="@string/ans_d"
            android:layout_below="@id/btnAnsc"
            android:background="#9E017180"
            android:layout_margin="2dp"

            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSubmitHome"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="@string/submit"
            android:layout_below="@id/btnAnsd"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="#F5F7F8"
            android:layout_centerInParent="true"
            android:layout_marginTop="25dp"
            android:background="#190019"

            />
    </RelativeLayout>
</LinearLayout>