<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:orientation="vertical"
    android:background="#E9E3D5"

    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:textColor="#190019"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/graduation_cap_solid"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/ic_cap"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="150dp"
        android:layout_gravity="center"
        android:textColor="#190019"

        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/email"
        android:layout_marginTop="25dp"
        app:boxStrokeColor="#01001d"
        app:cursorColor="#01001d"
        app:hintTextColor="#190019"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietEmail"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:inputType="textEmailAddress"

            />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/password"
        android:layout_marginTop="25dp"
        app:boxStrokeColor="#01001d"
        app:cursorColor="#01001d"
        app:hintTextColor="#190019"

        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietPassword"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:inputType="textPassword"

            />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton

        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/log_in"
        android:textStyle="bold"
        android:textColor="#F5F7F8"
        android:layout_marginTop="25dp"
        android:background="#1F1717"
        />
    <TextView
        android:id="@+id/tvSignup"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/new_user_sign_up"
        android:clickable="true"
        android:focusable="true"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:textColor="#190019"
        android:textSize="15sp"
        android:textStyle="bold"
        />




</LinearLayout>

    </ScrollView>


</LinearLayout>